syntax = "proto3";

package protos;

service Distsort {
  rpc WorkerReady (ReadyRequest) returns (ReadyReply) {}
  // Server-Side Streaming for Key Range
  rpc KeyRange (KeyRangeRequest) returns (stream KeyRangeReply) {}
  
  // rpc Partition (PartitionRequest) returns (PartitionReply) {}

  rpc SortFinish (SortFinishRequest) returns (SortFinishReply) {}
}

message ReadyRequest {
  string workerName = 1;
  string workerIpAddress = 2;
}

message ReadyReply {}

message KeyRangeRequest {
  int32 populationSize = 1;
  int32 numSamples = 2;
  repeated bytes samples = 3;
}

message KeyRangeReply {
  bytes lowerBound = 1;
  bytes upperBound = 2;
  string workerIpAddress = 3;
}

// message PartitionRequest {
//   string workerIpAddress = 1;
// }

// message PartitionReply {
//   repeated bytes data = 1;
// }

message SortFinishRequest {}

message SortFinishReply {}